[package]
name = "spy"
version = "0.1.1"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
description = "Rust spy functions for testing purposes"
documentation = "https://docs.rs/spy"
homepage = "https://github.com/AlexPikalov/spy"
repository = "https://github.com/AlexPikalov/spy"
readme = "./README.md"
keywords = ["testing", "spy", "TDD"]
license = "MIT/Apache-2.0"

[dependencies]
